chart/templates/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/component: container-registry
