chart/templates/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
